2008-01-28	Dmitry Dulepov	<dmitry@typo3.org>

	* Initial release